<?xml version="1.0"?>
<package format="2">
    <name>temp_pkg2</name>
    <version>0.0.0</version>
    <description>The temp_pkg2 package</description>

    <maintainer email="varunk@iitk.ac.in">varunk122</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <depend>depen1</depend>
    <depend>depen2</depend>

</package>
